--- a/.github/workflows/docker-on-push.yml
+++ b/.github/workflows/docker-on-push.yml
@@ -2,7 +2,7 @@ name: Docker (latest)
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, 'fix/docker-build' ]
 
 jobs:
   build:
@@ -31,4 +31,4 @@ jobs:
             SOURCE_COMMIT=${{ github.sha }}
           tags: klausmeyer/timesheet:latest
           platforms: linux/amd64,linux/arm64,linux/arm/v7
-          push: true
+          push: false
