--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,8 @@ jobs:
         run: bundle exec rails db:create db:migrate
       - name: Execute Tests
         run: bundle exec rspec
+      - name: Execute Linter
+        run: bundle exec rubocop
 
   build:
     runs-on: ubuntu-latest
